<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.chatbot.ChatBotFragment">


    <TextView
        android:id="@+id/tv_book_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/headerLexikon"
        android:textColor="@color/green"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/sendButton"
        android:layout_width="116dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="35dp"
        android:backgroundTint="@color/blue"
        android:text="@string/btnBot"
        app:layout_constraintBottom_toTopOf="@+id/botView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageInput" />

    <EditText
        android:id="@+id/messageInput"
        android:layout_width="361dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/searchbarcolor"
        android:hint="@string/editChat"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:paddingStart="36dp"
        android:paddingEnd="48dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_book_header" />


    <ScrollView
        android:id="@+id/botView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendButton">

        <TextView
            android:id="@+id/responseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chatBot"
            android:textSize="20sp"
            android:textStyle="bold" />
    </ScrollView>

    <ImageView
        android:id="@+id/lexiInfo"
        android:layout_width="268dp"
        android:layout_height="244dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/lexitextchat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651" />

    <ImageView
        android:id="@+id/lexiGif"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@drawable/lexigif" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageInput" />


</androidx.constraintlayout.widget.ConstraintLayout>